--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ h3 {
     color: var(--white-50);
     text-align: center;
     border-radius: 5rem;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 .download__ios {
