--- a/style.css
+++ b/style.css
@@ -192,7 +192,12 @@ h3 {
     }
 
     .keep-track__img img{
-        transform: translateX(-5rem);
+        transform: translateX(-8rem);
+    }
+
+    .keep-track__feature h3,
+    .keep-track__feature p {
+        text-align: start;
     }
 }
 
@@ -321,6 +326,4 @@ footer {
     .footer__menu-list {
         flex-direction: row;
     }
-
-
 }
